--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
 # Prerequisites
 *.d
 
+# Eclipse project files
+.project
+
+# Eclipse settings folder
+.settings/
+
+# Eclipse CDT
+.cproject
+.autotools
+
 # Compiled Object files
 *.slo
 *.lo
@@ -30,3 +40,18 @@
 *.exe
 *.out
 *.app
+[Dd]ebug*/
+[Rr]elease*/
+[Bb]in/
+
+# CMake
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+build/
